Bug 473565 - Rectangular Region option shows shattered Spectacle window when Fall Apart desktop effect is enabled
Summary: Rectangular Region option shows shattered Spectacle window when Fall Apart de...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
: 482097 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-08-20 16:41 UTC by Donald Davis
Modified: 2024-02-29 21:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma 6.0
Sentry Crash Report:


Attachments
Screen recording showing the bug (3.75 MB, video/webm)
2023-08-20 16:41 UTC, Donald Davis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Donald Davis 2023-08-20 16:41:54 UTC
Created attachment 161072 [details]
Screen recording showing the bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Enable the "Fall Apart" Desktop Effect in Plasma Settings
2. Launch spectacle (through application launcher or print screen shortcut)
3. Press Rectangular Region

OBSERVED RESULT
The window shattering animation completes before the region select shows
But the spectacle window shattered from the animation is still included in the region select
Proceeding to select a region with part of the spectacle window will capture the spectacle window

EXPECTED RESULT
Region select shows everything without the spectacle window in the way

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Reproduced in Wayland
Comment 1 Donald Davis 2023-08-20 16:54:28 UTC
To clarify, I meant I had originally found and reported the bug only testing Wayland. But now I have tested on X11 and have confirmed it occurs there too for me.
Comment 2 Nate Graham 2023-08-22 21:40:23 UTC
Fascinating; an issue with the timings of the animation, I guess.
Comment 3 Noah Davis 2023-08-22 21:57:37 UTC
As a quick solution, maybe we can blacklist Spectacle from the fall apart effect in KWin?
I think for a future proof solution, we're going to need some way for apps to request that they be excluded from compositor effects when doing certain things.
Comment 4 Vlad Zahorodnii 2023-11-06 10:09:09 UTC
Git commit ea75c094a90f60eafaa34b6ae885aa93871036a1 by Vlad Zahorodnii, on behalf of Noah Davis.
Committed on 06/11/2023 at 11:01.
Pushed by vladz into branch 'master'.

plugins/fallapart: Blacklist spectacle

Spectacle needs to be blacklisted in order to stay out of its own
screenshots.

M  +9    -0    src/plugins/fallapart/fallapart.cpp

https://invent.kde.org/plasma/kwin/-/commit/ea75c094a90f60eafaa34b6ae885aa93871036a1
Comment 5 Noah Davis 2024-02-29 21:34:45 UTC
*** Bug 482097 has been marked as a duplicate of this bug. ***