plugins/fallapart: Blacklist spectacle

Spectacle needs to be blacklisted in order to stay out of its own
screenshots.

BUG: 473565