src/plugins/fallapart/fallapart.cpp
@@ -15,6 +15,12 @@
 
 Q_LOGGING_CATEGORY(KWIN_FALLAPART, "kwin_effect_fallapart", QtWarningMsg)
 
+static const QSet<QString> s_blacklist{
+    // Spectacle needs to be blacklisted in order to stay out of its own screenshots.
+    QStringLiteral("spectacle spectacle"), // x11
+    QStringLiteral("spectacle org.kde.spectacle"), // wayland
+};
+
 namespace KWin
 {
 
@@ -168,6 +174,9 @@ void FallApartEffect::slotWindowClosed(EffectWindow *c)
         return;
     }
     if (!c->isVisible()) {
+        return;
+    }
+    if (s_blacklist.contains(c->windowClass())) {
         return;
     }
     const void *e = c->data(WindowClosedGrabRole).value<void *>();
